--- a/main.html
+++ b/main.html
@@ -1,7 +1,19 @@
 <html>
     <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" text="text/css" href="Mainstyle.css">
+        <title>Main Page</title>
     </head>
     <body>
-        <center><h1>Hello USER!</h1></center>
+        <a id="btn1" target="_blank" href="PS/index.html">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>      
+            Press to Look at button
+        </a>
+        <a href="login.php">
+            Exit
+        </a>
     </body>
 </html>
